2005-01-05  Jerry DeLisle  <jvdelisle@gcc.gnu.org>

	PR fortran/24268
	* gfortran.dg/fmt_white.f: Update test.

2006-01-05  Carlos O'Donell  <carlos@codesourcery.com>

	* gcc.dg/cast-1.c: Add new warning.
	* gcc.dg/cast-2.c: Likewise.
	* gcc.dg/cast-3.c: Likewise.
	* gcc.dg/format/cast-1.c: Likewise.
	* gcc.dg/cast-4.c: New testcase.

2006-01-05  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/22555
	* gcc.dg/tree-ssa/alias-3.c: New testcase.

2006-01-05  Richard Guenther  <rguenther@suse.de>
	    Diego Novillo  <dnovillo@redhat.com>

	* gcc.dg/tree-ssa/loop-11.c: Deal with removed vars pass.
	* gcc.dg/tree-ssa/loop-8.c: Likewise.
	* gcc.dg/tree-ssa/loop-1.c: Likewise.
	* gcc.dg/tree-ssa/pr23294.c: Likewise.
	* gcc.dg/tree-ssa/pr21985.c: Likewise.
	* gcc.dg/tree-ssa/loop-14.c: Likewise.
	* gcc.dg/tree-ssa/loop-2.c: Likewise.
	* gcc.dg/tree-ssa/loop-3.c: Likewise.
	* gcc.dg/tree-ssa/loop-4.c: Likewise.
	* gcc.dg/tree-ssa/pr21171.c: Likewise.
	* gcc.dg/tree-ssa/loop-5.c: Likewise.
	* gcc.dg/tree-ssa/loop-10.c: Likewise.
	* gcc.dg/tree-ssa/loop-6.c: Likewise.
	* treelang/compile/extravar.tree: Likewise.
	* g++.dg/tree-ssa/ssa-cast-1.C: Likewise.
	* g++.dg/tree-ssa/pointer-reference-alias.C: Likewise.
	* g++.dg/tree-ssa/ssa-sra-1.C: Likewise.
	* g++.dg/tree-ssa/ssa-sra-2.C: Likewise.
	* gcc.dg/tree-ssa/20031106-6.c: Disable SRA.

2006-01-05  Hans-Peter Nilsson  <hp@bitrange.com>

	* g++.dg/abi/thunk3.C, g++.dg/abi/thunk4.C: Revert unnecessary fix
	for 64-bit fix.

2006-01-05  Erik Edelmann  <eedelman@gcc.gnu.org>

	PR fortran/23675
	gfortran.dg/char_result_11.f90: New.

2006-01-04  Mark Mitchell  <mark@codesourcery.com>

	PR c++/24782
	* g++.dg/parse/access9.C: New test.
	* g++.dg/tc1/dr52.C: Tweak error markers.

2006-01-04  Richard Henderson  <rth@redhat.com>

	Merge from gomp branch.
	* g++.dg/parse/pragma2.C: Update expected error lines.

2006-01-04  Jakub Jelinek  <jakub@redhat.com>

	* g++.dg/other/i386-2.C: New test.

	PR target/25554