@@ -1,5 +1,11 @@
 2005-01-05  Jerry DeLisle  <jvdelisle@gcc.gnu.org>
 
+	PR fortran/25598
+	* gfortran.dg/backspace_3.f: New test.
+	* gfortran.dg/backspace_4.f: New test.
+
+2005-01-05  Jerry DeLisle  <jvdelisle@gcc.gnu.org>
+
 	PR fortran/24268
 	* gfortran.dg/fmt_white.f: Update test.
 
